@@ -25,9 +25,9 @@ EOF
 WriteMakefile(
     'NAME'	=> 'Gimp::Lib',
     'VERSION_FROM' => '../Gimp.pm',
-    'INC'	=> "$CPPFLAGS -I.. $CFLAGS $GIMP_INC_NOUI $DEFS".($IN_GIMP ? " -DIN_GIMP" : ""),
+    'INC'	=> "-I.. $GIMP_INC_NOUI $CPPFLAGS $CFLAGS $DEFS".($IN_GIMP ? " -DIN_GIMP" : ""),
     'macro'	=> { libdir => $libdir, exec_prefix => $exec_prefix, prefix => $prefix },
-    'LDLOADLIBS'=> "$LDFLAGS $LIBS $GIMP_LIBS_NOUI",
+    'LDLOADLIBS'=> "$GIMP_LIBS_NOUI $LDFLAGS $LIBS",
     'DEFINE'	=> '',
-    dynamic_lib	=> { OTHERLDFLAGS => "$LDFLAGS $LIBS $GIMP_LIBS_NOUI" },
+    dynamic_lib	=> { OTHERLDFLAGS => "$GIMP_LIBS_NOUI $LDFLAGS $LIBS" },
 );
