@@ -9,6 +9,8 @@ Revision history for Gimp-Perl extension.
 	- added Gimp::init_gtk function to initialize Gtk in a Gimp-compatible
 	  way.
 	- replaced the default colour database by something far better.
+	- exchanged order of some compiler commandline arguments.
+	- improved Makefile support for embed.
 
 1.08  Fri Apr  9 03:20:54 CEST 1999
 	- added guidegrid, git-text, roundrectsel, repdup, centerguide,
